Apply IntelliJ's refactorings in Debugger
IntelliJ recommended over a thousand fixes here. These include using
newer language constructs, removing unused imports, removing redundant
casts, eliminating deprecated function calls, using more performant
constructs, etc. Almost all of these changes were applied mechanically.